layernorm and building the transformer

--- a/papers/nlp/transormer/buil_transformer.ipynb
+++ b/papers/nlp/transormer/buil_transformer.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,15 +24,16 @@
     "        self.d_model = d_model\n",
     "        self.num_heads = num_heads\n",
     "        self.depth = d_model // num_heads\n",
-    "        \n",
+    "\n",
     "        self.wq = Linear(d_model, d_model)\n",
     "        self.wk = Linear(d_model, d_model)\n",
     "        self.wv = Linear(d_model, d_model)\n",
-    "        \n",
+    "\n",
     "        self.attention = ScaledDPAttention(self.depth)\n",
-    "        \n",
-    "        self.dense = Linear(d_model, d_model)\n",
-    "    \n",
+    "\n",
+    "        self.linear = Linear(d_model, d_model)\n",
+    "        self.norm = LayerNorm(d_model)\n",
+    "\n",
     "    def split_heads(self, x, batch_size):        \n",
     "        x = x.reshape(batch_size,  self.num_heads, -1, self.depth)\n",
     "        return x.transpose(0, 2, 1, 3)  # (batch_size, num_heads, seq_len, depth)\n",
@@ -47,9 +48,9 @@
     "        scaled_attention, _ = self.attention.forward(q, k, v)\n",
     "        scaled_attention = scaled_attention.transpose(0, 2, 1, 3).reshape(batch_size, -1, self.d_model)  # (batch_size, seq_len, d_model)\n",
     "        \n",
-    "        output = self.dense(scaled_attention)\n",
+    "        output = self.linear(scaled_attention)\n",
     "        \n",
-    "        return output\n",
+    "        return self.norm(output + q.transpose(0, 2, 1, 3).reshape(output.shape))  \n",
     "\n",
     "class ScaledDPAttention(Module):\n",
     "    def __init__(self, d_model=512):\n",
@@ -63,6 +64,16 @@
     "        output = attn @ v\n",
     "        return output, attn\n",
     "        \n",
+    "class LinearLayer(Module):\n",
+    "    def __init__(self, d_model=512):\n",
+    "        self.fc1 = Linear(d_model, d_model)\n",
+    "        self.relu = ReLU()\n",
+    "        self.fc2 = Linear(d_model, d_model)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
     "\n",
     "class TransformerEncoder(Module):\n",
     "    def __init__(self, vocab_size=1000, d_model=512, num_heads=8):\n",
@@ -70,7 +81,7 @@
     "        self.input_embedding = Embedding(vocab_size, d_model)\n",
     "        self.positional_embedding = Embedding(5000, d_model)\n",
     "        self.multi_head_attention = MultiHeadAttention(d_model, num_heads)\n",
-    "        self.linear_layer = Linear(d_model, d_model)\n",
+    "        self.linear_layer = LinearLayer(d_model)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        batch_size, seq_len = x.shape\n",
@@ -85,13 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(10, 8, 4, 64)\n",
       "Transformer Encoder test passed!\n"
      ]
     }
@@ -115,6 +127,34 @@
     "assert output.shape == (batch_size, seq_len, d_model), f\"Output shape mismatch: expected {(batch_size, seq_len, d_model)}, got {output.shape}\"\n",
     "\n",
     "print(\"Transformer Encoder test passed!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransformerDecoder(Module):\n",
+    "    def __init__(self, vocab_size=1000, d_model=512, num_heads=8):\n",
+    "        super().__init__()\n",
+    "        self.input_embedding = Embedding(vocab_size, d_model)\n",
+    "        self.positional_embedding = Embedding(5000, d_model)\n",
+    "        self.masked_multi_head_attention = MultiHeadAttention(d_model, num_heads)\n",
+    "        self.multi_head_attention = MultiHeadAttention(d_model, num_heads)\n",
+    "        self.linear_layer = Linear(d_model, d_model)\n",
+    "        self.softmax = Softmax()\n",
+    "        self.linear_layer = LinearLayer(d_model)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        batch_size, seq_len = x.shape\n",
+    "        pos = np.arange(seq_len)\n",
+    "        x = self.input_embedding(x) + self.positional_embedding(pos)[None, :, :]\n",
+    "        x = x.transpose(1, 0, 2)  # (batch_size, seq_len, d_model) -> (seq_len, batch_size, d_model)\n",
+    "        x = self.multi_head_attention(x, x, x)\n",
+    "        x = x.transpose(1, 0, 2)  # (seq_len, batch_size, d_model) -> (batch_size, seq_len, d_model)\n",
+    "        x = self.linear_layer(x)\n",
+    "        return x"
    ]
   }
  ],
